BZ 849782 - rss button rendering issue BZ 839242 - new app page for zend needed css added BZ 820086 - long sshkey name text-overflow issue Check in new account plan styleguide pages for billing, payment, review/confirm along with new form validation css Misc css - switch heading font-size to be based off of $baseFontSize computation - match <legend> style to heading.divide for consistency when used on console form pages - addition of <select> to standard form field rules (not sure why they aren't included in bootstrap by default) - set box-showdow(none) on .btn so there's no conflict when used on <input> - create aside rule within console/_core to be used on pages with for secondary column (help) - remove input grid system rules that caused conflicting widths with inputs set to grid span - add :focus to buttonBackground mixin - decrease spacing associated with .control-group - added rules for :focus:required:valid :focus:required:invalid to take advantage of client side browsers that support them - move rules for field feedback states from _custom to _forms - .alert a so link color is optimal on all alert states

--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -96,22 +96,6 @@ textarea:focus {
   vertical-align: middle;
 	}
 
-// FORM FIELD FEEDBACK STATES
-// --------------------------
-
-// Warning
-.control-group.warning {
-  @include formFieldState($warningBackground, $warningBackground, $warningBackground);
-}
-// Error
-.control-group.error {
-  @include formFieldState($errorBackground, $errorBackground, $errorBackground);
-}
-// Success
-.control-group.success {
-  @include formFieldState($successBackground, $successBackground, $successBackground);
-}
-
 
 
 /* Print styles */
